test/integration/runtime/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                normalize_path: true
                merge_slashes: true
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: authz_agent
                      domains: ["*"]
                      routes:
                        - match:
                            path: /internal/v1/decision-logs
                          route:
                            cluster: decision_log_cluster
                            timeout: 30s
                        - match:
                            path: /access/v1/authorize
                          route:
                            cluster: opa_cluster
                            prefix_rewrite: /v1/data/authorize
                            timeout: 30s
                        - match:
                            path: /access/v1/check/resource/bulk/operations
                          route:
                            cluster: opa_cluster
                            prefix_rewrite: /v1/data/authorize
                            timeout: 30s
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: check_resource_bulk_operations
                        - match:
                            path: /preview/v1/check/resource/bulk/operations
                          route:
                            cluster: opa_cluster
                            prefix_rewrite: /v1/data/authorize
                            timeout: 30s
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: check_resource_bulk_operations
                        - match:
                            path: /access/v1/check/resource/bulk
                          route:
                            cluster: opa_cluster
                            prefix_rewrite: /v1/data/authorize
                            timeout: 30s
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: check_resource_bulk
                        - match:
                            path: /access/v1/check/resource
                          route:
                            cluster: opa_cluster
                            prefix_rewrite: /v1/data/authorize
                            timeout: 30s
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: check_resource
                        - match:
                            path: /access/v1/check/filter
                          route:
                            cluster: opa_cluster
                            prefix_rewrite: /v1/data/authorize
                            timeout: 30s
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: check_filter
                        - match:
                            path: /access/v2/check/resource/bulk/operations
                          route:
                            cluster: opa_cluster
                            prefix_rewrite: /v1/data/authorize
                            timeout: 30s
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: check_resource_bulk_operations_v2
                        - match:
                            path: /preview/v2/check/resource/bulk/operations
                          route:
                            cluster: opa_cluster
                            prefix_rewrite: /v1/data/authorize
                            timeout: 30s
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: check_resource_bulk_operations_v2
                        - match:
                            path: /access/v2/check/resource
                          route:
                            cluster: opa_cluster
                            prefix_rewrite: /v1/data/authorize
                            timeout: 30s
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: check_resource_v2
                        - match:
                            path: /access/v2/check/filter
                          route:
                            cluster: opa_cluster
                            prefix_rewrite: /v1/data/authorize
                            timeout: 30s
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: check_filter
                        - match:
                            path: /api-version
                          direct_response:
                            status: 200
                            body:
                              inline_string: '{"specs":[{"specRootUrl":"/access","major":3,"minor":0,"supportedMajors":[1,2,3]},{"specRootUrl":"/api","major":1,"minor":1,"supportedMajors":[1]},{"specRootUrl":"/template","major":1,"minor":0,"supportedMajors":[1]},{"specRootUrl":"/preview","major":2,"minor":0,"supportedMajors":[1,2]}]}'
                          response_headers_to_add:
                            - header:
                                key: content-type
                                value: application/json
                              append_action: OVERWRITE_IF_EXISTS_OR_ADD
                        - match:
                            path: /health
                          route:
                            cluster: pap_client_cluster
                            timeout: 5s
                        - match:
                            prefix: /
                          direct_response:
                            status: 404
                            body:
                              inline_string: '{"message":"not found"}'
                http_filters:
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      default_source_code:
                        inline_string: |
                          function envoy_on_request(request_handle)
                          end

                          function envoy_on_response(response_handle)
                          end
                      source_codes:
                        check_resource:
                          filename: /etc/envoy/lua/check_resource.lua
                        check_resource_bulk:
                          filename: /etc/envoy/lua/check_resource_bulk.lua
                        check_resource_bulk_operations:
                          filename: /etc/envoy/lua/check_resource_bulk_operations.lua
                        check_resource_v2:
                          filename: /etc/envoy/lua/check_resource_v2.lua
                        check_resource_bulk_operations_v2:
                          filename: /etc/envoy/lua/check_resource_bulk_operations_v2.lua
                        check_filter:
                          filename: /etc/envoy/lua/check_filter.lua
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: pap_client_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: pap_client_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: opa
                      port_value: 8182
    - name: opa_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: opa_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: opa
                      port_value: 8181
    - name: decision_log_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: decision_log_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: decision-log-collector
                      port_value: 8183

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
